--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -5,7 +5,7 @@
              NavigationPage.HasNavigationBar="False">
 
     <ScrollView>
-        <StackLayout BackgroundColor="AntiqueWhite">
+        <StackLayout BackgroundColor="Aquamarine">
             <Label Text="Formulario"
                    FontSize="40"
                    Margin="0,20,0,0"
@@ -15,29 +15,29 @@
                    CornerRadius="20"
                    HasShadow="False">
                 <StackLayout>
-                    <Label Text="Nombre:"/>
-                        <Entry x:Name="Name"
-                               Placeholder="Enter your name"/>
-                    <Label Text="Ocupacion:" />
+                    <Label Text="Nombres Completos:"/>
+                        <Entry x:Name="Nombre"
+                               Placeholder="Ingresa tus nombres completos"/>
+                    <Label Text="Ocupacion/titulo:" />
                         <Entry x:Name="Ocupacion"
-                               Placeholder="Enter your occupation" />
-                    <Label Text="Fecha de nacimiento:" />
-                        <Entry x:Name="Birthday"
-                               Placeholder="Enter your Date" />
+                               Placeholder="Ingresa tu ocupación/titulo" />
+                    <Label Text="Nacimiento:" />
+                        <Entry x:Name="Cumple"
+                               Placeholder="Ingresa la fecha en que has nacido" />
                     <Label Text="Contacto:" />
                         <Entry x:Name="Email"
-                               Placeholder="Enter your E-mail" />
-                        <Entry x:Name="Phone"
-                               Placeholder="Enter your phone number" />
-                    <Label Text="Nacionalidad:" />
+                               Placeholder="Ingresa tu correo electronico" />
+                        <Entry x:Name="Telefono"
+                               Placeholder="Ingresa tu numero telefonico" />
+                    <Label Text="Lugar de nacimiento:" />
                         <Entry x:Name="Nacionalidad"
-                               Placeholder="Enter your Country" />
-                    <Label Text="English level:" />
-                        <Entry x:Name="Level"
-                               Placeholder="Enter your English level" />
+                               Placeholder="Ingresa tu lugar de nacimiento" />
+                    <Label Text="Nivel de ingles:" />
+                        <Entry x:Name="Nivel"
+                               Placeholder="Ingresa tu nivel de ingles" />
                     <Label Text="Perfil:" />
                         <Editor x:Name="Perfil"
-                                Placeholder="Enter your Description"
+                                Placeholder="Ingresa tu nivel de ingles"
                                 AutoSize="TextChanges"/>
                     
                     <Button Text="Registrar"
